# portal-desktop

./: .cursorignore  .dockerignore  .eslintignore  .gitignore  .npmrc  .prettierignore  .prettierrc  CLOUD_STATUS.md  COMPLETE_PROJECT_BLUEPRINT.md  Dockerfile.linux  Dockerfile.macos  Dockerfile.windows  IMPROVEMENTS.md  INSTALLATION.md  README.md  appimagelauncher-2.2.0-travis995.0f91801.x86_64.rpm  docker-compose.yml  eslint.config.js  jira-task-generator-plan.md  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  portal_desktop.code-workspace  svelte.config.js  tailwind.config.js  test-n8n-integration.js  test-ollama-integration.js  tsconfig.json  vite.config.ts
.claude/: launch.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_paths.rs  command_executor.rs  database.rs  error.rs  invoke_handler.rs  lib.rs  main.rs  process_ext.rs  terminal.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/domains/ai/: catalog.rs  chat.rs  chat_title.rs  commands.rs  context_usage.rs  conversation.rs  logging.rs  message.rs  mod.rs  platform_config.rs
src-tauri/src/domains/automation/: commands.rs  mod.rs
src-tauri/src/domains/autonomy/: commands.rs  mod.rs
src-tauri/src/domains/coder/: agent_mode.rs  commands.rs  diff.rs  git_commit.rs  git_status.rs  mod.rs  multitask.rs  permissions.rs  platform_stream.rs  service.rs  tools.rs  types.rs  worktree.rs
src-tauri/src/domains/credentials/: commands.rs  mod.rs
src-tauri/src/domains/custom_scripts/: commands.rs  mod.rs
src-tauri/src/domains/dashboard/: commands.rs
src-tauri/src/domains/deployments/: commands.rs  mod.rs
src-tauri/src/domains/disk/: classify.rs  commands.rs  db.rs  disk.rs  locations.rs  mod.rs  projects.rs  quarantine.rs  scan.rs  verify.rs  verify_ai.rs
src-tauri/src/domains/documents/: commands.rs  mod.rs
src-tauri/src/domains/environment/: commands.rs  mod.rs  platform.rs  types.rs  unix.rs  windows.rs
src-tauri/src/domains/github/: commands.rs  service.rs  types.rs
src-tauri/src/domains/ide/: commands.rs  mod.rs
src-tauri/src/domains/kubernetes/: commands.rs  manager.rs  mod.rs  services.rs  types.rs
src-tauri/src/domains/languages/: commands.rs  mod.rs
src-tauri/src/domains/learning/: commands.rs  mod.rs
src-tauri/src/domains/network/: commands.rs
src-tauri/src/domains/package_managers/: commands.rs  mod.rs
src-tauri/src/domains/projects/: commands.rs  mod.rs
src-tauri/src/domains/scripts/: commands.rs  mod.rs
src-tauri/src/domains/sdk/: factory.rs  manager_detector.rs  mod.rs  ollama_manager.rs  version_fetcher.rs  version_installer.rs
src-tauri/src/entities/: block.rs  custom_script.rs  deployment.rs  device_approval.rs  document.rs  framework.rs  framework_ide_mapping.rs  github_connection.rs  github_project_link.rs  ide.rs  language.rs  learned_pattern.rs  learning_event.rs  mod.rs  package_manager.rs  pipeline.rs  pipeline_execution.rs  project.rs  project_framework.rs  project_language.rs  project_package_manager.rs  saved_view.rs  script_execution.rs  task.rs  task_attachment.rs  task_comment.rs  task_template.rs  terminal_command_history.rs  terminal_note.rs  terminal_session.rs  user_preference.rs
src-tauri/src/migrations/: m20240101_000001_create_frameworks_table.rs  m20240101_000001_create_projects_table.rs  m20240101_000002_create_package_managers_table.rs  m20240101_000002_create_tasks_table.rs  m20240101_000003_create_languages_table.rs  m20240101_000004_create_ides_table.rs  m20240101_000004_create_task_comments_table.rs  m20240101_000005_create_projects_table.rs  m20240101_000005_create_task_attachments_table.rs  m20240101_000006_create_framework_ide_mappings_table.rs  m20240101_000007_create_tasks_table.rs  m20240101_000008_create_task_comments_table.rs  m20240101_000009_create_task_attachments_table.rs  m20240101_000010_create_task_templates_table.rs  m20240101_000011_create_learning_tables.rs  m20240101_000011_create_pipelines_table.rs  m20240101_000012_add_important_flags.rs  m20240101_000012_create_pipeline_executions_table.rs  m20240101_000013_create_pipelines_table.rs  m20240101_000013_create_saved_views_table.rs  m20240101_000014_create_learning_tables.rs  m20240101_000015_create_blocks_table.rs  m20240101_000016_create_credentials_table.rs  m20240101_000017_create_documents_table.rs  m20240101_000018_create_ai_tables.rs  m20240101_000019_create_custom_scripts_table.rs  m20240101_000020_create_project_frameworks_table.rs  m20240101_000021_create_project_languages_table.rs  m20240101_000022_create_project_package_managers_table.rs  m20240101_000023_create_device_approvals_table.rs  m20240101_000024_create_sdk_tables.rs  m20240101_000025_create_script_executions_table.rs  m20260325_000026_create_terminal_command_history_table.rs  m20260325_000027_create_terminal_sessions_table.rs  m20260325_000028_create_terminal_notes_table.rs  m20260325_000029_add_preset_key_to_pipelines.rs  m20260330_000030_create_deployments_table.rs  m20260706_000031_create_coder_tables.rs  m20260706_000032_create_coder_file_changes_table.rs  m20260707_000033_add_model_to_ai_conversations.rs  (+7 more)
src-tauri/src/utils/: logger.rs  mod.rs  pnpm_workspace.rs
(+1111 files in other folders)
