[package]
name = "portal-desktop"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "portal_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.9"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
async-trait = "0.1"
reqwest = { version = "0.12.23", features = ["json", "stream", "blocking"] }
ring = "0.17"
base64 = "0.22"
thiserror = "1.0"
dirs = "5.0"
# Download infrastructure dependencies
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
xz2 = "0.1"
futures-util = "0.3"
version-compare = "0.1"
sysinfo = "0.30"
which = "6.0"
toml = "0.8"
# Kubernetes dependencies
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio-tungstenite = "0.21"
futures = "0.3"
serde_yaml = "0.9"
rand = "0.8"
once_cell = "1.21.3"
# Disk-cleanup domain (ported from portal_disk_utility)
jwalk = "0.8"
trash = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.14"

